--- a/www/index.html
+++ b/www/index.html
@@ -129,7 +129,7 @@
         </nav>
 
         <section id="hero-image">
-            <img src="./images/hero-latest.png" alt="Studenter som pluggar">
+            <img src="./images/hero-image.jpg" alt="Studenter som pluggar">
         </section>
 
         <main class="wrapper">
