Fixed links and colors on kontakt and nh-rum

--- a/www/kontakt.html
+++ b/www/kontakt.html
@@ -126,7 +126,7 @@
 
             <aside>
                 <nav role="navigation">
-                    <h3>Länkar</h3>
+                    <h3>Kontakt</h3>
                     <ul>
                         <li><a href="#">Hitta utbildningar</a></li>
                         <li><a href="#">Anmäl brister i en utbildning</a></li>
