--- a/www/publikationer.html
+++ b/www/publikationer.html
@@ -27,14 +27,12 @@
                 <li>Mina sidor</li>
             </ul>
 
-            <img src="images/myh-logo-min.png" alt="Myndigheten för Yrkeshögskolans logo"
-                title="Myndigheten för Yrkeshögskolans logo" />
+            <img src="images/myh-logo-min.png" alt="Myndigheten för Yrkeshögskolans logo" title="Myndigheten för Yrkeshögskolans logo" />
 
             <h1>Myndigheten för<br />yrkeshögskolan</h1>
 
             <form id="search-desktop" class="search-box" role="search">
-                <input type="search" placeholder="Sök på webbplatsen"
-                    aria-label="Sök på hela webbplatsen" size="20">
+                <input type="search" placeholder="Sök på webbplatsen" aria-label="Sök på hela webbplatsen" size="20">
                 <button class="btn" type="submit">Sök</button>
             </form>
 
@@ -122,8 +120,7 @@
                     </li>
                     <li id="search-mobile">
                         <form class="search-box" role="search">
-                            <input type="search" placeholder="Sök på webbplatsen"
-                                aria-label="Sök på hela webbplatsen" size="20">
+                            <input type="search" placeholder="Sök på webbplatsen" aria-label="Sök på hela webbplatsen" size="20">
                             <button class="btn" type="submit">Sök</button>
                         </form>
                     </li>
@@ -136,10 +133,7 @@
             <section id="publication-header">
                 <h2>Publikationer</h2>
 
-                <p>Här hittar du Myndigheten för yrkeshögskolans rapporter, faktablad, broschyrer,
-                    informationsblad och andra publikationer. Du kan filtrera typ av publikation,
-                    område
-                    och utgivningsår nedan.</p>
+                <p>Här hittar du Myndigheten för yrkeshögskolans rapporter, faktablad, broschyrer, informationsblad och andra publikationer. Du kan filtrera typ av publikation, område och utgivningsår nedan.</p>
             </section>
 
             <section id="publication-filter-wrapper">
@@ -194,79 +188,58 @@
             <section id="publications-list">
 
                 <div class="pub-list-card">
-                    <img class="pub-list-img" src="./images/Infor_kvalitetsgranskning_2020-mini.jpg"
-                        alt="pdf">
+                    <img class="pub-list-img" src="./images/Infor_kvalitetsgranskning_2020-mini.jpg" alt="pdf">
                     <div class="pub-list-text">
-                        <h3><a
-                                href="https://www.myh.se/Documents/Publikationer/Informationsmaterial/Infor_kvalitetsgranskning_2020.pdf">Faktablad:
+                        <h3><a href="https://www.myh.se/Documents/Publikationer/Informationsmaterial/Infor_kvalitetsgranskning_2020.pdf">Faktablad:
                                 inför kvalitetsgranskning av
                                 yrkeshögskoleutbildningar 2020</a></h3>
 
-                        <p><span class="pub-year">Utgiven: 2019-11-01</span> Myndigheten granskar
-                            löpande kvaliteten i de utbildningar vi ansvarar för. Syftet är
-                            framförallt att... </p>
+                        <p><span class="pub-year">Utgiven: 2019-11-01</span> Myndigheten granskar löpande kvaliteten i de utbildningar vi ansvarar för. Syftet är framförallt att... </p>
 
-                        <p><span class="pdf-icon"></span><a
-                                href="https://www.myh.se/Documents/Publikationer/Informationsmaterial/Infor_kvalitetsgranskning_2020.pdf">Inför
+                        <p><span class="pdf-icon"></span><a href="https://www.myh.se/Documents/Publikationer/Informationsmaterial/Infor_kvalitetsgranskning_2020.pdf">Inför
                                 kvalitetsgranskning
                                 2020</a></p>
                     </div>
                 </div>
 
                 <div class="pub-list-card">
-                    <img class="pub-list-img" src="./images/Kvalitetskriterier_2020-mini.jpg"
-                        alt="pdf">
+                    <img class="pub-list-img" src="./images/Kvalitetskriterier_2020-mini.jpg" alt="pdf">
                     <div class="pub-list-text">
-                        <h3><a
-                                href="https://www.myh.se/Documents/Publikationer/Informationsmaterial/Kvalitetskriterier_2020.pdf">Faktablad:
+                        <h3><a href="https://www.myh.se/Documents/Publikationer/Informationsmaterial/Kvalitetskriterier_2020.pdf">Faktablad:
                                 kvalitetskriterier för yrkeshögskolan 2020</a>
                         </h3>
 
-                        <p><span class="pub-year">Utgiven: 2019-10-31</span> Myndigheten har tagit
-                            fram kvalitetskriterier som tillsammans beskriver det som anses vara en
-                            utbildning... </p>
+                        <p><span class="pub-year">Utgiven: 2019-10-31</span> Myndigheten har tagit fram kvalitetskriterier som tillsammans beskriver det som anses vara en utbildning... </p>
 
-                        <p><span class="pdf-icon"></span><a
-                                href="https://www.myh.se/Documents/Publikationer/Informationsmaterial/Kvalitetskriterier_2020.pdf">Kvalitetskriterier
+                        <p><span class="pdf-icon"></span><a href="https://www.myh.se/Documents/Publikationer/Informationsmaterial/Kvalitetskriterier_2020.pdf">Kvalitetskriterier
                                 för yrkeshögskolan 2020</a></p>
                     </div>
                 </div>
 
                 <div class="pub-list-card">
-                    <img class="pub-list-img"
-                        src="./images/Granskningsrapport_tematisk_kvalitetsgranskning_av_anordnares_arbete_med_validering_slut-mini.jpg"
-                        alt="pdf">
+                    <img class="pub-list-img" src="./images/Granskningsrapport_tematisk_kvalitetsgranskning_av_anordnares_arbete_med_validering_slut-mini.jpg" alt="pdf">
                     <div class="pub-list-text">
-                        <h3><a
-                                href="https://www.myh.se/Documents/Publikationer/Rapporter/2019/Granskningsrapport_tematisk_kvalitetsgranskning_av_anordnares_arbete_med_validering_slut.pdf">Resultat
+                        <h3><a href="https://www.myh.se/Documents/Publikationer/Rapporter/2019/Granskningsrapport_tematisk_kvalitetsgranskning_av_anordnares_arbete_med_validering_slut.pdf">Resultat
                                 av tematisk kvalitetsgranskning av anordnares
                                 arbete med validering mot den sammanhållna grundutbildningen till
                                 kontakttolk 2019</a></h3>
 
-                        <p><span class="pub-year">Utgiven: 2019-10-17</span> I denna rapport
-                            presenteras det samlade resultatet från myndighetens tematiska
-                            kvalitetsgranskningar... </p>
+                        <p><span class="pub-year">Utgiven: 2019-10-17</span> I denna rapport presenteras det samlade resultatet från myndighetens tematiska kvalitetsgranskningar... </p>
 
-                        <p><span class="pdf-icon"></span><a
-                                href="https://www.myh.se/Documents/Publikationer/Rapporter/2019/Granskningsrapport_tematisk_kvalitetsgranskning_av_anordnares_arbete_med_validering_slut.pdf"></a>Ladda
-                            ner rapporten</p>
+                        <p><span class="pdf-icon"></span>
+                            <a href="https://www.myh.se/Documents/Publikationer/Rapporter/2019/Granskningsrapport_tematisk_kvalitetsgranskning_av_anordnares_arbete_med_validering_slut.pdf"></a>Ladda ner rapporten</p>
                     </div>
                 </div>
 
                 <div class="pub-list-card">
-                    <img class="pub-list-img"
-                        src="./images/Tillgodoraknande_i_yrkeshogskolan_2019-mini.jpg" alt="pdf">
+                    <img class="pub-list-img" src="./images/Tillgodoraknande_i_yrkeshogskolan_2019-mini.jpg" alt="pdf">
                     <div class="pub-list-text">
-                        <h3><a
-                                href="https://www.myh.se/Documents/Publikationer/Rapporter/2019/Granskningsrapport_tematisk_kvalitetsgranskning_av_anordnares_arbete_med_validering_slut.pdf">Tillgodoräknande
+                        <h3><a href="https://www.myh.se/Documents/Publikationer/Rapporter/2019/Granskningsrapport_tematisk_kvalitetsgranskning_av_anordnares_arbete_med_validering_slut.pdf">Tillgodoräknande
                                 inom yrkeshögskolan</a></h3>
 
-                        <p><span class="pub-year">Utgiven: 2019-10-15</span> Utgångspunkten för
-                            utredningen är att ökad användning av validering och tillgodoräknande i
-                            yrkeshögskolan... </p>
+                        <p><span class="pub-year">Utgiven: 2019-10-15</span> Utgångspunkten för utredningen är att ökad användning av validering och tillgodoräknande i yrkeshögskolan... </p>
 
-                        <p><span class="pdf-icon"></span><a
-                                href="https://www.myh.se/Documents/Publikationer/Rapporter/2019/Granskningsrapport_tematisk_kvalitetsgranskning_av_anordnares_arbete_med_validering_slut.pdf">Ladda
+                        <p><span class="pdf-icon"></span><a href="https://www.myh.se/Documents/Publikationer/Rapporter/2019/Granskningsrapport_tematisk_kvalitetsgranskning_av_anordnares_arbete_med_validering_slut.pdf">Ladda
                                 ner rapporten</a></p>
                     </div>
                 </div>
@@ -277,47 +250,36 @@
         </main>
 
         <footer>
-            <div id="fotter">
-                <div class="row">
-                    <div class="column"><br>
-                        <h4>Telefon</h4>
-                        <p>Ring vår växel 010-209 01 00
-                            Växeln är öppen vardagar 8.00 - 17.00</p>
-                    </div>
-                    <div class="column">
-                        <br>
-                        <h4>Digitalt kundforum</h4>
-                        <p>Se vanliga frågor och svar eller ställ frågor: <a
-                                href="https://forum.myh.se/org/myndigheten-for-yrkeshogskola/">forum.myh.se</a>
-                    </div>
-                    <div class="column"><br>
-                        <h4>E-post</h4>
-                        <p>Allmänna frågor/synpunkter: info@myh.se
-                            Registrator: registrator@myh.se</p>
-                    </div>
-                    <div class="column"><br>
-                        <h4>Adress</h4>
-                        <p>Myndigheten för yrkeshögskolan
-                            Box 145
-                            72105 Västerås</p>
-                    </div>
-                    <div class="column"><br>
-                        <h4>Om webbplatsen</h4>
-                        <p>Använda webbplatsen
-                            <br>
-                            Om Webbkakor Webbkarta</p>
-                    </div>
-                    <div class="column"><br>
-                        <h4>Våra övriga webbplatser</h4>
-                        <p>www.yrkeshogskolan.se
-                            <br>www.konstkulturutbildning.se<br>www.blitolk.nu<br>www.seqf.se</p>
-                    </div>
-                    <div class="column"><br>
-                        <h4>Ansvarig utgivare</h4>
-                        <p>Thomas Persson, generaldirektör MYH.</p>
-                    </div>
+            <div class="footer-content">
+                <div class="footer-item">
+                    <h4>Telefon</h4>
+                    <p>Ring vår växel 010-209 01 00 Växeln är öppen vardagar 8.00 - 17.00</p>
 
+                    <h4>Digitalt kundforum</h4>
+                    <p>Se vanliga frågor och svar eller ställ frågor: <a href="https://forum.myh.se/org/myndigheten-for-yrkeshogskola/">forum.myh.se</a>
+
+                        <h4>E-post</h4>
+                        <p>Allmänna frågor/synpunkter: info@myh.se Registrator: registrator@myh.se</p>
                 </div>
+
+                <div class="footer-item">
+                    <h4>Adress</h4>
+                    <p>Myndigheten för yrkeshögskolan Box 145 72105 Västerås</p>
+
+                    <h4>Ansvarig utgivare</h4>
+                    <p>Thomas Persson, generaldirektör MYH.</p>
+                </div>
+
+                <div class="footer-item">
+                    <h4>Om webbplatsen</h4>
+                    <p>Använda webbplatsen
+                        <br> Om Webbkakor Webbkarta</p>
+
+                    <h4>Våra övriga webbplatser</h4>
+                    <p>www.yrkeshogskolan.se
+                        <br>www.konstkulturutbildning.se<br>www.blitolk.nu<br>www.seqf.se</p>
+                </div>
+
             </div>
         </footer>
     </div>
