--- a/www/statistik.html
+++ b/www/statistik.html
@@ -21,14 +21,12 @@
                 <li>Mina sidor</li>
             </ul>
 
-            <img src="images/myh-logo-min.png" alt="Myndigheten för Yrkeshögskolans logo"
-                title="Myndigheten för Yrkeshögskolans logo" />
+            <img src="images/myh-logo-min.png" alt="Myndigheten för Yrkeshögskolans logo" title="Myndigheten för Yrkeshögskolans logo" />
 
             <h1>Myndigheten för<br />yrkeshögskolan</h1>
 
             <form id="search-desktop" class="search-box" role="search">
-                <input type="search" placeholder="Sök på webbplatsen"
-                    aria-label="Sök på hela webbplatsen" size="20">
+                <input type="search" placeholder="Sök på webbplatsen" aria-label="Sök på hela webbplatsen" size="20">
                 <button class="btn" type="submit">Sök</button>
             </form>
 
@@ -116,8 +114,7 @@
                     </li>
                     <li id="search-mobile">
                         <form class="search-box" role="search">
-                            <input type="search" placeholder="Sök på webbplatsen"
-                                aria-label="Sök på hela webbplatsen" size="20">
+                            <input type="search" placeholder="Sök på webbplatsen" aria-label="Sök på hela webbplatsen" size="20">
                             <button class="btn" type="submit">Sök</button>
                         </form>
                     </li>
@@ -154,9 +151,7 @@
                     </div>
                 </figure>
 
-                <p class="larger">Här hittar du statistik om yrkeshögskoleutbildningar, konst- och
-                    kulturutbildningar och utbildningar med endast tillsyn samt tolkutbildningar
-                    inom folkbildningen.</p>
+                <p class="larger">Här hittar du statistik om yrkeshögskoleutbildningar, konst- och kulturutbildningar och utbildningar med endast tillsyn samt tolkutbildningar inom folkbildningen.</p>
 
                 <p><em>Yrkeshögskoleutbildningar omfattar både yrkeshögskoleutbildning (YH) och
                         kvalificerad yrkesutbildning (KY).</em></p>
@@ -165,8 +160,7 @@
 
                 <h3>Faktablad med statistik</h3>
 
-                <p>Här kan du ladda ner faktablad med kortfattad statistik om yrkeshögskole-
-                    utbildningar, konst- och kulturutbildningar samt tolkutbildningar.</p>
+                <p>Här kan du ladda ner faktablad med kortfattad statistik om yrkeshögskole- utbildningar, konst- och kulturutbildningar samt tolkutbildningar.</p>
 
                 <p><a href="#"><span class="pdf-icon"> </span>Faktablad med kortfattad statistik
                         om yrkeshögskolan 2018</a></p>
@@ -179,8 +173,7 @@
 
                 <h3>Statistiska Årsrapporter</h3>
 
-                <p>Via länkarna nedan hittar du Myndigheten för yrkeshögskolans senaste årsrapporter
-                    med samlad statistik om de utbildningsformer som vi ansvarar för.</p>
+                <p>Via länkarna nedan hittar du Myndigheten för yrkeshögskolans senaste årsrapporter med samlad statistik om de utbildningsformer som vi ansvarar för.</p>
 
                 <p><a href="#">Statistisk årsrapport 2019</a></p>
 
@@ -199,47 +192,36 @@
         </main>
 
         <footer>
-            <div id="fotter">
-                <div class="row">
-                    <div class="column"><br>
-                        <h4>Telefon</h4>
-                        <p>Ring vår växel 010-209 01 00
-                            Växeln är öppen vardagar 8.00 - 17.00</p>
-                    </div>
-                    <div class="column">
-                        <br>
-                        <h4>Digitalt kundforum</h4>
-                        <p>Se vanliga frågor och svar eller ställ frågor: <a
-                                href="https://forum.myh.se/org/myndigheten-for-yrkeshogskola/">forum.myh.se</a>
-                    </div>
-                    <div class="column"><br>
-                        <h4>E-post</h4>
-                        <p>Allmänna frågor/synpunkter: info@myh.se
-                            Registrator: registrator@myh.se</p>
-                    </div>
-                    <div class="column"><br>
-                        <h4>Adress</h4>
-                        <p>Myndigheten för yrkeshögskolan
-                            Box 145
-                            72105 Västerås</p>
-                    </div>
-                    <div class="column"><br>
-                        <h4>Om webbplatsen</h4>
-                        <p>Använda webbplatsen
-                            <br>
-                            Om Webbkakor Webbkarta</p>
-                    </div>
-                    <div class="column"><br>
-                        <h4>Våra övriga webbplatser</h4>
-                        <p>www.yrkeshogskolan.se
-                            <br>www.konstkulturutbildning.se<br>www.blitolk.nu<br>www.seqf.se</p>
-                    </div>
-                    <div class="column"><br>
-                        <h4>Ansvarig utgivare</h4>
-                        <p>Thomas Persson, generaldirektör MYH.</p>
-                    </div>
+            <div class="footer-content">
+                <div class="footer-item">
+                    <h4>Telefon</h4>
+                    <p>Ring vår växel 010-209 01 00 Växeln är öppen vardagar 8.00 - 17.00</p>
 
+                    <h4>Digitalt kundforum</h4>
+                    <p>Se vanliga frågor och svar eller ställ frågor: <a href="https://forum.myh.se/org/myndigheten-for-yrkeshogskola/">forum.myh.se</a>
+
+                        <h4>E-post</h4>
+                        <p>Allmänna frågor/synpunkter: info@myh.se Registrator: registrator@myh.se</p>
                 </div>
+
+                <div class="footer-item">
+                    <h4>Adress</h4>
+                    <p>Myndigheten för yrkeshögskolan Box 145 72105 Västerås</p>
+
+                    <h4>Ansvarig utgivare</h4>
+                    <p>Thomas Persson, generaldirektör MYH.</p>
+                </div>
+
+                <div class="footer-item">
+                    <h4>Om webbplatsen</h4>
+                    <p>Använda webbplatsen
+                        <br> Om Webbkakor Webbkarta</p>
+
+                    <h4>Våra övriga webbplatser</h4>
+                    <p>www.yrkeshogskolan.se
+                        <br>www.konstkulturutbildning.se<br>www.blitolk.nu<br>www.seqf.se</p>
+                </div>
+
             </div>
         </footer>
     </div>
