--- a/www/verksamhetsomraden.html
+++ b/www/verksamhetsomraden.html
@@ -27,14 +27,12 @@
                 <li>Mina sidor</li>
             </ul>
 
-            <img src="images/myh-logo-min.png" alt="Myndigheten för Yrkeshögskolans logo"
-                title="Myndigheten för Yrkeshögskolans logo" />
+            <img src="images/myh-logo-min.png" alt="Myndigheten för Yrkeshögskolans logo" title="Myndigheten för Yrkeshögskolans logo" />
 
             <h1>Myndigheten för<br />yrkeshögskolan</h1>
 
             <form id="search-desktop" class="search-box" role="search">
-                <input type="search" placeholder="Sök på webbplatsen"
-                    aria-label="Sök på hela webbplatsen" size="20">
+                <input type="search" placeholder="Sök på webbplatsen" aria-label="Sök på hela webbplatsen" size="20">
                 <button class="btn" type="submit">Sök</button>
             </form>
 
@@ -122,8 +120,7 @@
                     </li>
                     <li id="search-mobile">
                         <form class="search-box" role="search">
-                            <input type="search" placeholder="Sök på webbplatsen"
-                                aria-label="Sök på hela webbplatsen" size="20">
+                            <input type="search" placeholder="Sök på webbplatsen" aria-label="Sök på hela webbplatsen" size="20">
                             <button class="btn" type="submit">Sök</button>
                         </form>
                     </li>
@@ -132,131 +129,120 @@
         </nav>
 
         <main id="verksamhetsomraden" class="wrapper">
-                <section id="main-verksamhet">
+            <section id="main-verksamhet">
 
-                        <section id="intro-text" tabindex="0">
-                            <h1>Verksamhetsområden</h1>
+                <section id="intro-text" tabindex="0">
+                    <h1>Verksamhetsområden</h1>
+                    <p>
+                        Myndigheten för yrkeshögskolan har i uppdrag att ansvara för frågor som rör utbildningar inom yrkeshögskolan. Dessutom ansvarar vi för ytterligare frågor inom utbildningsområdet.
+                    </p>
+                </section>
+
+                <section class="card">
+                    <a href="#">
+                        <section class="card-image">
+                            <img src="./images/YH-start.png" alt="Yrkeshögskolan">
+                        </section>
+                        <section class="card-text">
+                            <h4>Yrkeshögskolan</h4>
                             <p>
-                                    Myndigheten för yrkeshögskolan har i uppdrag att ansvara för frågor som rör utbildningar inom yrkeshögskolan. Dessutom ansvarar vi för ytterligare frågor inom utbildningsområdet.
-                            </p>
+                                Utbildningar som svarar mot arbetslivets behov av kvalificerad yrkeskompetens och som drivs i nära samverkan med företag och andra arbetsgivare.</p>
                         </section>
-                
-                        <section class="card">
-                            <a href="#">
-                            <section class="card-image">
-                                <img src="./images/YH-start.png" alt="Yrkeshögskolan">
-                            </section>
-                            <section class="card-text">
-                                 <h4>Yrkeshögskolan</h4> 
-                                 <p>
-                                    Utbildningar som svarar mot arbetslivets behov av kvalificerad yrkeskompetens och som drivs i nära samverkan med företag och andra arbetsgivare.</p>
-                            </section>
-                            </a>
+                    </a>
+                </section>
+                <section class="card">
+                    <a href="#">
+                        <section class="card-image">
+                            <img src="./images/KK-start.png" alt="Konst- och kulturutbildningar">
                         </section>
-                        <section class="card">
-                            <a href="#">
-                            <section class="card-image">
-                                <img src="./images/KK-start.png" alt="Konst- och kulturutbildningar">
-                            </section>
-                            <section class="card-text">
-                                <h4>Konst- och kulturutbildningar</h4> 
-                                <p> 
-                                    Utbildningar som är högskoleförberedande, yrkesförberedande eller inom kulturarvsområdet och drivs av privata utbildningsanordnare.</p>
-                            </section>
-                            </a>
+                        <section class="card-text">
+                            <h4>Konst- och kulturutbildningar</h4>
+                            <p>
+                                Utbildningar som är högskoleförberedande, yrkesförberedande eller inom kulturarvsområdet och drivs av privata utbildningsanordnare.</p>
                         </section>
-                        <section class="card">
-                            <a href="#">
-                            <section class="card-image">
-                                <img src="./images/Kontakttolk.png" alt="Tolkutbildningar">
-                            </section>
-                            <section class="card-text">
-                                <h4>Tolkutbildningar</h4>
-                                <p>
-                                    Utbildningar till kontakttolk, teckenspråks- och dövblindtolk samt skrivtolk som drivs av folkhögskolor och studieförbund.</p>
-                            </section>
-                            </a>
+                    </a>
+                </section>
+                <section class="card">
+                    <a href="#">
+                        <section class="card-image">
+                            <img src="./images/Kontakttolk.png" alt="Tolkutbildningar">
                         </section>
-                        <section class="card">
-                            <a href="#">
-                            <section class="card-image">
-                                <img src="./images/tillsyn.jpg" alt="Utbildningar med endast tillsyn">
-                            </section>
-                            <section class="card-text">
-                                <h4>Utbildningar med endast tillsyn</h4>
-                                <p>
-                                    Eftergymnasiala utbildningar inom olika områden som bedrivs av fristående skolor. Utbildningarnas statliga stöd omfattas endast av tillsyn.</p>
-                            </section>
-                            </a>
+                        <section class="card-text">
+                            <h4>Tolkutbildningar</h4>
+                            <p>
+                                Utbildningar till kontakttolk, teckenspråks- och dövblindtolk samt skrivtolk som drivs av folkhögskolor och studieförbund.</p>
                         </section>
-                        <section class="card">
-                            <a href="#">
-                            <section class="card-image">
-                                <img src="./images/QF.jpg" alt="SeQF">
-                            </section>
-                            <section class="card-text">
-                                <h4>SeQF</h4>
-                                <p>Sveriges referensram för kvalifikationer (SeQF) ska synliggöra allt lärande för att öka matchningen på arbetsmarknaden.</p>
-                            </section>
-                            </a>
+                    </a>
+                </section>
+                <section class="card">
+                    <a href="#">
+                        <section class="card-image">
+                            <img src="./images/tillsyn.jpg" alt="Utbildningar med endast tillsyn">
                         </section>
-                        <section class="card">
-                            <a href="#">
-                            <section class="card-image">
-                                <img src="./images/Scandinav_41YW_validering_webb.jpg" alt="Validering">
-                            </section>
-                            <section class="card-text">
-                                <h4>Validering</h4>
-                                <p>
-                                    Validering innebär att en persons kunskaper och kompetenser kartläggs och bedöms på ett strukturerat sätt, för studier eller arbete, oavsett hur, var eller när de förvärvats.</p>
-                            </section>
-                            </a>
+                        <section class="card-text">
+                            <h4>Utbildningar med endast tillsyn</h4>
+                            <p>
+                                Eftergymnasiala utbildningar inom olika områden som bedrivs av fristående skolor. Utbildningarnas statliga stöd omfattas endast av tillsyn.</p>
                         </section>
-                    </section>
+                    </a>
+                </section>
+                <section class="card">
+                    <a href="#">
+                        <section class="card-image">
+                            <img src="./images/QF.jpg" alt="SeQF">
+                        </section>
+                        <section class="card-text">
+                            <h4>SeQF</h4>
+                            <p>Sveriges referensram för kvalifikationer (SeQF) ska synliggöra allt lärande för att öka matchningen på arbetsmarknaden.</p>
+                        </section>
+                    </a>
+                </section>
+                <section class="card">
+                    <a href="#">
+                        <section class="card-image">
+                            <img src="./images/Scandinav_41YW_validering_webb.jpg" alt="Validering">
+                        </section>
+                        <section class="card-text">
+                            <h4>Validering</h4>
+                            <p>
+                                Validering innebär att en persons kunskaper och kompetenser kartläggs och bedöms på ett strukturerat sätt, för studier eller arbete, oavsett hur, var eller när de förvärvats.</p>
+                        </section>
+                    </a>
+                </section>
+            </section>
         </main>
 
         <footer>
-            <div id="fotter">
-                <div class="row">
-                    <div class="column"><br>
-                        <h4>Telefon</h4>
-                        <p>Ring vår växel 010-209 01 00
-                            Växeln är öppen vardagar 8.00 - 17.00</p>
-                    </div>
-                    <div class="column">
-                        <br>
-                        <h4>Digitalt kundforum</h4>
-                        <p>Se vanliga frågor och svar eller ställ frågor: <a
-                                href="https://forum.myh.se/org/myndigheten-for-yrkeshogskola/">forum.myh.se</a>
-                    </div>
-                    <div class="column"><br>
-                        <h4>E-post</h4>
-                        <p>Allmänna frågor/synpunkter: info@myh.se
-                            Registrator: registrator@myh.se</p>
-                    </div>
-                    <div class="column"><br>
-                        <h4>Adress</h4>
-                        <p>Myndigheten för yrkeshögskolan
-                            Box 145
-                            72105 Västerås</p>
-                    </div>
-                    <div class="column"><br>
-                        <h4>Om webbplatsen</h4>
-                        <p>Använda webbplatsen
-                            <br>
-                            Om Webbkakor Webbkarta</p>
-                    </div>
-                    <div class="column"><br>
-                        <h4>Våra övriga webbplatser</h4>
-                        <p>www.yrkeshogskolan.se
-                            <br>www.konstkulturutbildning.se<br>www.blitolk.nu<br>www.seqf.se</p>
-                    </div>
-                    <div class="column"><br>
-                        <h4>Ansvarig utgivare</h4>
-                        <p>Thomas Persson, generaldirektör MYH.</p>
-                    </div>
+            <div class="footer-content">
+                <div class="footer-item">
+                    <h4>Telefon</h4>
+                    <p>Ring vår växel 010-209 01 00 Växeln är öppen vardagar 8.00 - 17.00</p>
 
+                    <h4>Digitalt kundforum</h4>
+                    <p>Se vanliga frågor och svar eller ställ frågor: <a href="https://forum.myh.se/org/myndigheten-for-yrkeshogskola/">forum.myh.se</a>
+
+                        <h4>E-post</h4>
+                        <p>Allmänna frågor/synpunkter: info@myh.se Registrator: registrator@myh.se</p>
                 </div>
+
+                <div class="footer-item">
+                    <h4>Adress</h4>
+                    <p>Myndigheten för yrkeshögskolan Box 145 72105 Västerås</p>
+
+                    <h4>Ansvarig utgivare</h4>
+                    <p>Thomas Persson, generaldirektör MYH.</p>
+                </div>
+
+                <div class="footer-item">
+                    <h4>Om webbplatsen</h4>
+                    <p>Använda webbplatsen
+                        <br> Om Webbkakor Webbkarta</p>
+
+                    <h4>Våra övriga webbplatser</h4>
+                    <p>www.yrkeshogskolan.se
+                        <br>www.konstkulturutbildning.se<br>www.blitolk.nu<br>www.seqf.se</p>
+                </div>
+
             </div>
         </footer>
     </div>
