--- a/www/omoss.html
+++ b/www/omoss.html
@@ -2,259 +2,217 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles/styles.css" />
-  <title>Start - Myndigheten för yrkeshögskolan</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="styles/styles.css" />
+    <title>Start - Myndigheten för yrkeshögskolan</title>
 </head>
 
 <body>
-  <div id="container">
-    <header class="wrapper">
+    <div id="container">
+        <header class="wrapper">
 
-      <ul>
-        <li>In English</li>
-        <li>Lättläst</li>
-        <li>Anpassa</li>
-        <li>Mina sidor</li>
-      </ul>
-
-      <img src="images/myh-logo-min.png" alt="Myndigheten för Yrkeshögskolans logo"
-        title="Myndigheten för Yrkeshögskolans logo" />
-
-      <h1>Myndigheten för<br />yrkeshögskolan</h1>
-
-      <form id="search-desktop" class="search-box" role="search">
-        <input type="search" placeholder="Sök på webbplatsen" aria-label="Sök på hela webbplatsen"
-          size="20">
-        <button class="btn" type="submit">Sök</button>
-      </form>
-
-    </header>
-
-    <nav aria-label="Main">
-      <div class="wrapper">
-        <input id="menu-toggle" type="checkbox" />
-
-        <div id="hamburger-container">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-
-        <label for="menu-toggle">MENY</label>
-
-        <ul id="main-menu">
-          <li>
-            <a href="index.html">Start </a>
-          </li>
-          <li>
-            <a href="omoss.html">Om oss</a>
             <ul>
-              <li><a href="#">Organisation</a></li>
-              <li><a href="#">Så styrs myndigheten</a></li>
-              <li><a href="#">Redovisning av verksamheten</a></li>
-              <li><a href="#">MYH fyller 10 år!</a></li>
-              <li><a href="#">Remissvar och yttranden</a></li>
-              <li><a href="#">Pågående upphandlingar</a></li>
-              <li><a href="#">Fakturera oss</a></li>
-              <li><a href="#">Jobba hos oss</a></li>
-              <li><a href="#">Behandling av personuppgifter</a></li>
+                <li>In English</li>
+                <li>Lättläst</li>
+                <li>Anpassa</li>
+                <li>Mina sidor</li>
             </ul>
-          </li>
-          <li>
-            <a href="verksamhetsomraden.html">Verksamhetsområden</a>
-            <ul>
-              <li><a href="#">Yrkeshögskolan</a></li>
-              <li><a href="#">Konst- och kulturutbildningar</a></li>
-              <li><a href="#">Tolkutbildningar</a></li>
-              <li><a href="#">Utbildningar med endast tillsyn</a></li>
-              <li><a href="#">SeQF</a></li>
-              <li><a href="#">Validering</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="lagar.html">Lagar, regler, tillsyn</a>
-            <ul>
-              <li><a href="#">Lagar och förordningar</a></li>
-              <li><a href="#">Gällande föreskrifter</a></li>
-              <li><a href="#">Allmänna råd</a></li>
-              <li><a href="#">Tillsyn</a></li>
-              <li><a href="#">Kvalitetsgranskning</a></li>
-              <li><a href="#">Anmäl brister i en utbildning</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="statistik.html">Statistik</a>
-            <ul>
-              <li><a href="#">Yrkeshögskoleutbildningar</a></li>
-              <li>
-                <a href="#">Konst- och kulturutbildningar och utbildningar med
+
+            <img src="images/myh-logo-min.png" alt="Myndigheten för Yrkeshögskolans logo" title="Myndigheten för Yrkeshögskolans logo" />
+
+            <h1>Myndigheten för<br />yrkeshögskolan</h1>
+
+            <form id="search-desktop" class="search-box" role="search">
+                <input type="search" placeholder="Sök på webbplatsen" aria-label="Sök på hela webbplatsen" size="20">
+                <button class="btn" type="submit">Sök</button>
+            </form>
+
+        </header>
+
+        <nav aria-label="Main">
+            <div class="wrapper">
+                <input id="menu-toggle" type="checkbox" />
+
+                <div id="hamburger-container">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+
+                <label for="menu-toggle">MENY</label>
+
+                <ul id="main-menu">
+                    <li>
+                        <a href="index.html">Start </a>
+                    </li>
+                    <li>
+                        <a href="omoss.html">Om oss</a>
+                        <ul>
+                            <li><a href="#">Organisation</a></li>
+                            <li><a href="#">Så styrs myndigheten</a></li>
+                            <li><a href="#">Redovisning av verksamheten</a></li>
+                            <li><a href="#">MYH fyller 10 år!</a></li>
+                            <li><a href="#">Remissvar och yttranden</a></li>
+                            <li><a href="#">Pågående upphandlingar</a></li>
+                            <li><a href="#">Fakturera oss</a></li>
+                            <li><a href="#">Jobba hos oss</a></li>
+                            <li><a href="#">Behandling av personuppgifter</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="verksamhetsomraden.html">Verksamhetsområden</a>
+                        <ul>
+                            <li><a href="#">Yrkeshögskolan</a></li>
+                            <li><a href="#">Konst- och kulturutbildningar</a></li>
+                            <li><a href="#">Tolkutbildningar</a></li>
+                            <li><a href="#">Utbildningar med endast tillsyn</a></li>
+                            <li><a href="#">SeQF</a></li>
+                            <li><a href="#">Validering</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="lagar.html">Lagar, regler, tillsyn</a>
+                        <ul>
+                            <li><a href="#">Lagar och förordningar</a></li>
+                            <li><a href="#">Gällande föreskrifter</a></li>
+                            <li><a href="#">Allmänna råd</a></li>
+                            <li><a href="#">Tillsyn</a></li>
+                            <li><a href="#">Kvalitetsgranskning</a></li>
+                            <li><a href="#">Anmäl brister i en utbildning</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="statistik.html">Statistik</a>
+                        <ul>
+                            <li><a href="#">Yrkeshögskoleutbildningar</a></li>
+                            <li>
+                                <a href="#">Konst- och kulturutbildningar och utbildningar med
                   endast
                   tillsyn</a>
-              </li>
-              <li><a href="#">Tolkutbildningar inom folkbildningen</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="publikationer.html">Publikationer</a>
-          </li>
-          <li>
-            <a href="nyhetsrum.html">Nyhetsrum</a>
-            <ul>
-              <li><a href="#">Nyheter</a></li>
-              <li><a href="#">Pressmeddelanden</a></li>
-              <li><a href="#">Kalender</a></li>
-              <li><a href="#">Filmer</a></li>
-              <li><a href="#">Pressbilder</a></li>
-              <li><a href="#">Nyhetsbrev</a></li>
-            </ul>
-          </li>
-          <li><a href="kontakt.html">Kontakt</a>
-          </li>
-          <li id="search-mobile">
-            <form class="search-box" role="search">
-              <input type="search" placeholder="Sök på webbplatsen"
-                aria-label="Sök på hela webbplatsen" size="20">
-              <button class="btn" type="submit">Sök</button>
-            </form>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <main id="om-oss" class="wrapper two-column-display">
-
-      <aside>
-        <nav role="navigation" aria-label="seconadary navigation">
-          <h3>Länkar</h3>
-          <ul>
-            <li><a href="#">Organisation</a></li>
-            <li><a href="#">Så styrs myndigheten</a></li>
-            <li><a href="#">Redovisning av verksamheten</a></li>
-            <li><a href="#">MYH fyller 10 år!</a></li>
-            <li><a href="#">Remissvar och yttranden</a></li>
-            <li><a href="#">Pågående upphandlingar</a></li>
-            <li><a href="#">Fakturera oss</a></li>
-            <li><a href="#">Jobba hos oss</a></li>
-            <li><a href="#">Behandling av personuppgifter</a></li>
-          </ul>
+                            </li>
+                            <li><a href="#">Tolkutbildningar inom folkbildningen</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="publikationer.html">Publikationer</a>
+                    </li>
+                    <li>
+                        <a href="nyhetsrum.html">Nyhetsrum</a>
+                        <ul>
+                            <li><a href="#">Nyheter</a></li>
+                            <li><a href="#">Pressmeddelanden</a></li>
+                            <li><a href="#">Kalender</a></li>
+                            <li><a href="#">Filmer</a></li>
+                            <li><a href="#">Pressbilder</a></li>
+                            <li><a href="#">Nyhetsbrev</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="kontakt.html">Kontakt</a>
+                    </li>
+                    <li id="search-mobile">
+                        <form class="search-box" role="search">
+                            <input type="search" placeholder="Sök på webbplatsen" aria-label="Sök på hela webbplatsen" size="20">
+                            <button class="btn" type="submit">Sök</button>
+                        </form>
+                    </li>
+                </ul>
+            </div>
         </nav>
-      </aside>
 
-      <section id="om-oss-box">
-        <article>
-          <h2>Om oss</h2>
-          <figure id="omoss-image">
-            <img src="./images/woman-laughing-s.png" alt="En man och en kvinna med en laptop">
-          </figure>
+        <main id="om-oss" class="wrapper two-column-display">
 
-          <p class="larger">Myndigheten för yrkeshögskolans huvuduppdrag är att ansvara för frågor
-            som rör
-            yrkeshögskolan i Sverige och verka för att utbildningarna tillgodoser arbetslivets behov
-            av
-            kompetens.</p>
+            <aside>
+                <nav role="navigation" aria-label="seconadary navigation">
+                    <h3>Länkar</h3>
+                    <ul>
+                        <li><a href="#">Organisation</a></li>
+                        <li><a href="#">Så styrs myndigheten</a></li>
+                        <li><a href="#">Redovisning av verksamheten</a></li>
+                        <li><a href="#">MYH fyller 10 år!</a></li>
+                        <li><a href="#">Remissvar och yttranden</a></li>
+                        <li><a href="#">Pågående upphandlingar</a></li>
+                        <li><a href="#">Fakturera oss</a></li>
+                        <li><a href="#">Jobba hos oss</a></li>
+                        <li><a href="#">Behandling av personuppgifter</a></li>
+                    </ul>
+                </nav>
+            </aside>
 
-          <p>Vi analyserar arbetsmarknadens behov av utbildningar inom yrkeshögskolan, beslutar
-            vilka
-            utbildningar
-            som ska ingå i yrkeshögskolan och beviljar statliga medel till utbildningsanordnarna. Vi
-            främjar
-            även validering i utbildningarna.</p>
+            <section id="om-oss-box">
+                <article>
+                    <h2>Om oss</h2>
+                    <figure id="omoss-image">
+                        <img src="./images/woman-laughing-s.png" alt="En man och en kvinna med en laptop">
+                    </figure>
 
-          <p>Vi ansvarar också för frågor som rör vissa utbildningar som ligger utanför
-            yrkeshögskolan -
-            eftergymnasiala konst- och kulturutbildningar som bedrivs av fristående skolor samt
-            tolkutbildningar
-            inom folkbildningen.</p>
+                    <p class="larger">Myndigheten för yrkeshögskolans huvuduppdrag är att ansvara för frågor som rör yrkeshögskolan i Sverige och verka för att utbildningarna tillgodoser arbetslivets behov av kompetens.
+                    </p>
 
-          <p>Myndigheten utövar tillsyn och hanterar klagomål på de utbildningar som ligger inom
-            vårt
-            ansvarsområde. Vi granskar även utbildningarnas kvalitet, framställer statistik och
-            följer upp
-            utbildningars resultat.</p>
+                    <p>Vi analyserar arbetsmarknadens behov av utbildningar inom yrkeshögskolan, beslutar vilka utbildningar som ska ingå i yrkeshögskolan och beviljar statliga medel till utbildningsanordnarna. Vi främjar även validering i utbildningarna.</p>
 
-          <p>Vi är också nationell samordningspunkt för EQF (European Qualifications Framework) som
-            ska göra
-            det
-            lättare att jämföra utbildnings- och yrkeskvalifikationer inom EU.</p>
+                    <p>Vi ansvarar också för frågor som rör vissa utbildningar som ligger utanför yrkeshögskolan - eftergymnasiala konst- och kulturutbildningar som bedrivs av fristående skolor samt tolkutbildningar inom folkbildningen.</p>
 
-          <a href="https://www.myh.se/Verksamhetsomraden/">Läs mer om våra
+                    <p>Myndigheten utövar tillsyn och hanterar klagomål på de utbildningar som ligger inom vårt ansvarsområde. Vi granskar även utbildningarnas kvalitet, framställer statistik och följer upp utbildningars resultat.</p>
+
+                    <p>Vi är också nationell samordningspunkt för EQF (European Qualifications Framework) som ska göra det lättare att jämföra utbildnings- och yrkeskvalifikationer inom EU.</p>
+
+                    <a href="https://www.myh.se/Verksamhetsomraden/">Läs mer om våra
             verksamhetsområden</a>
-          <img class="newarrow" role="link" src="./images/icon-arrow-right.svg"
-            alt="Navigations-pil" width="18px" height="18px">
-        </article>
+                    <img class="newarrow" role="link" src="./images/icon-arrow-right.svg" alt="Navigations-pil" width="18px" height="18px">
+                </article>
 
-        <h3>Vi finns på Youtube</h3>
+                <h3>Vi finns på Youtube</h3>
 
-        <p class="larger">För mer information om vad vi gör följ oss på vår youtube-kanal.<br>
-          Nedan ett klipp från vårt 10årsseminarie där utbildningsminister Anna Ekström medverkade.
-        </p>
+                <p class="larger">För mer information om vad vi gör följ oss på vår youtube-kanal.<br> Nedan ett klipp från vårt 10årsseminarie där utbildningsminister Anna Ekström medverkade.
+                </p>
 
-        <iframe class="omoss-video" type="video/mp4" src="https://www.youtube.com/embed/z08L0dklN3o"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+                <iframe class="omoss-video" type="video/mp4" src="https://www.youtube.com/embed/z08L0dklN3o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-        <p>Utbildningssminister Anna Ekström talar om yrkeshögskolans vikt på 10årsseminariet.</p>
+                <p>Utbildningssminister Anna Ekström talar om yrkeshögskolans vikt på 10årsseminariet.</p>
 
-        <p class="larger">Klicka vidare till <a
-            href="https://www.youtube.com/channel/UC8iPn0eKy-5vQ6Mx_-ep-KA"
-            role="link">Webbredaktionen MYH </a> för
-          fler uppdateringar.</p>
+                <p class="larger">Klicka vidare till <a href="https://www.youtube.com/channel/UC8iPn0eKy-5vQ6Mx_-ep-KA" role="link">Webbredaktionen MYH </a> för fler uppdateringar.</p>
 
 
-      </section>
-    </main>
+            </section>
+        </main>
 
-    <footer>
-      <div id="fotter">
-        <div class="row">
-          <div class="column"><br>
-            <h4>Telefon</h4>
-            <p>Ring vår växel 010-209 01 00
-              Växeln är öppen vardagar 8.00 - 17.00</p>
-          </div>
-          <div class="column">
-            <br>
-            <h4>Digitalt kundforum</h4>
-            <p>Se vanliga frågor och svar eller ställ frågor: <a
-                href="https://forum.myh.se/org/myndigheten-for-yrkeshogskola/">forum.myh.se</a>
-          </div>
-          <div class="column"><br>
-            <h4>E-post</h4>
-            <p>Allmänna frågor/synpunkter: info@myh.se
-              Registrator: registrator@myh.se</p>
-          </div>
-          <div class="column"><br>
-            <h4>Adress</h4>
-            <p>Myndigheten för yrkeshögskolan
-              Box 145
-              72105 Västerås</p>
-          </div>
-          <div class="column"><br>
-            <h4>Om webbplatsen</h4>
-            <p>Använda webbplatsen
-              <br>
-              Om Webbkakor Webbkarta</p>
-          </div>
-          <div class="column"><br>
-            <h4>Våra övriga webbplatser</h4>
-            <p>www.yrkeshogskolan.se
-              <br>www.konstkulturutbildning.se<br>www.blitolk.nu<br>www.seqf.se
-            </p>
-          </div>
-          <div class="column"><br>
-            <h4>Ansvarig utgivare</h4>
-            <p>Thomas Persson, generaldirektör MYH.</p>
-          </div>
+        <footer>
+            <div class="footer-content">
+                <div class="footer-item">
+                    <h4>Telefon</h4>
+                    <p>Ring vår växel 010-209 01 00 Växeln är öppen vardagar 8.00 - 17.00</p>
 
-        </div>
-      </div>
-    </footer>
-  </div>
+                    <h4>Digitalt kundforum</h4>
+                    <p>Se vanliga frågor och svar eller ställ frågor: <a href="https://forum.myh.se/org/myndigheten-for-yrkeshogskola/">forum.myh.se</a>
+
+                        <h4>E-post</h4>
+                        <p>Allmänna frågor/synpunkter: info@myh.se Registrator: registrator@myh.se</p>
+                </div>
+
+                <div class="footer-item">
+                    <h4>Adress</h4>
+                    <p>Myndigheten för yrkeshögskolan Box 145 72105 Västerås</p>
+
+                    <h4>Ansvarig utgivare</h4>
+                    <p>Thomas Persson, generaldirektör MYH.</p>
+                </div>
+
+                <div class="footer-item">
+                    <h4>Om webbplatsen</h4>
+                    <p>Använda webbplatsen
+                        <br> Om Webbkakor Webbkarta</p>
+
+                    <h4>Våra övriga webbplatser</h4>
+                    <p>www.yrkeshogskolan.se
+                        <br>www.konstkulturutbildning.se<br>www.blitolk.nu<br>www.seqf.se</p>
+                </div>
+
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
