New image on lagar fix on footer

--- a/www/lagar.html
+++ b/www/lagar.html
@@ -142,7 +142,7 @@
                 <h2>Lagar, regler och tillsyn</h2>
 
                 <figure id="legal">
-                    <img src="./images/lady-justice.jpg" alt="fru justitia">
+                    <img src="./images/lagar.jpg" alt="Skriver på en laptop">
                 </figure>
 
                 <p class="larger">För alla utbildningsformer finns det lagar och andra bestämmelser som måste följas. Det gäller till exempel hur utbildningarna ska utformas, kursplaner, betygskriterier, examina, tillträde och avgifter.</p>
