Changed title on sec nav

--- a/www/lagar.html
+++ b/www/lagar.html
@@ -126,7 +126,7 @@
 
             <aside>
                 <nav role="navigation" aria-label="seconadary navigation">
-                    <h3>Länkar</h3>
+                    <h3>Lagar, regler och tillsyn </h3>
                     <ul>
                         <li><a href="#">Lagar och förordningar</a></li>
                         <li><a href="#">Gällande föreskrifter</a></li>
