--- a/www/nyhetsrum.html
+++ b/www/nyhetsrum.html
@@ -177,8 +177,9 @@
                             <div class="card-img-3"></div>
 
                             <div>
-                                <h3><a href="#">Hon jobbar med att göra YH mer känt och erkänt</a>
-                                </h3>
+                                <a href="#">
+                                    <h3>Hon jobbar med att göra YH mer känt och erkänt</h3>
+                                </a>
                                 <p>1 oktober 2019 Maria Granberg är en tongivande YH-ambassadör. Idag arbetar hon på Handelskammaren där hon leder satsningen Yrkeshögskola Mälardalen. Innan dess var hon handläggare på Myndigheten för yrkeshögskolan och...</p>
                             </div>
                         </div>
