--- a/www/statistik.html
+++ b/www/statistik.html
@@ -126,7 +126,7 @@
 
             <aside>
                 <nav role="navigation" aria-label="seconadary navigation">
-                    <h3>Länkar</h3>
+                    <h3>Statistik</h3>
                     <ul>
                         <li><a href="#">Yrkeshögskoleutbildningar</a></li>
                         <li><a href="#">Konst- och kulturutbildningar och<br>utbildningar med endast
