--- a/www/index.html
+++ b/www/index.html
@@ -274,7 +274,9 @@
 
                         <div>
 
-                            <h3><a href="#">Hon jobbar med att göra YH mer känt och erkänt</a></h3>
+                            <a href="#">
+                                <h3>Hon jobbar med att göra YH mer känt och erkänt</h3>
+                            </a>
 
                             <p>1 oktober 2019 Maria Granberg är en tongivande YH-ambassadör. Idag arbetar hon på Handelskammaren där hon leder satsningen Yrkeshögskola Mälardalen. Innan dess var hon handläggare på Myndigheten för yrkeshögskolan och...</p>
 
@@ -296,7 +298,7 @@
                     <p>Ring vår växel 010-209 01 00 Växeln är öppen vardagar 8.00 - 17.00</p>
 
                     <h4>Digitalt kundforum</h4>
-                    <p>Se vanliga frågor och svar eller ställ frågor: <a href="https://forum.myh.se/org/myndigheten-for-yrkeshogskola/">forum.myh.se</a>
+                    <p>Se vanliga frågor och svar eller ställ frågor: <strong><a href="https://forum.myh.se/org/myndigheten-for-yrkeshogskola/">forum.myh.se</a></strong>
 
                         <h4>E-post</h4>
                         <p>Allmänna frågor/synpunkter: info@myh.se Registrator: registrator@myh.se</p>
