Fixed sec nav and margins

--- a/www/omoss.html
+++ b/www/omoss.html
@@ -126,7 +126,7 @@
 
             <aside>
                 <nav role="navigation" aria-label="seconadary navigation">
-                    <h3>Länkar</h3>
+                    <h3>Om oss</h3>
                     <ul>
                         <li><a href="#">Organisation</a></li>
                         <li><a href="#">Så styrs myndigheten</a></li>
